@@ -70,6 +70,12 @@ function module_filter_settings() {
     '#description' => t('This is purely cosmetic (at least for now). Displays a ON/OFF switch rather than a checkbox to enable/disable modules.<br /><strong>Modules will not actually be enabled/disabled until the form is saved.</strong>'),
     '#default_value' => variable_get('module_filter_use_switch', 1),
   );
+  $form['tabs']['module_filter_track_recent_modules'] = array(
+    '#type' => 'checkbox',
+    '#title' => t('Track recently enabled/disabled modules'),
+    '#description' => t('Adds a "Recent" tab that displays modules that have been enabled or disabled with the last week.'),
+    '#default_value' => variable_get('module_filter_track_recent_modules', 1),
+  );
 
   $form['update'] = array(
     '#type' => 'fieldset',
