@@ -83,6 +83,10 @@ function module_filter_form_system_modules_alter(&$form, &$form_state, $form_id)
 
   $form['#theme'] = 'module_filter_system_modules';
   $form['#submit'][] = 'module_filter_system_modules_submit_redirect';
+
+  if (variable_get('module_filter_track_recent_modules', 1)) {
+    $form['#submit'][] = 'module_filter_system_modules_submit_recent';
+  }
 }
 
 /**
@@ -91,6 +95,7 @@ function module_filter_form_system_modules_alter(&$form, &$form_state, $form_id)
 function module_filter_form_user_admin_permissions_alter(&$form, &$form_state) {
   $form['module_filter'] = array(
     '#type' => 'module_filter',
+    '#description' => t('Filter list by module. Use the query operator "perm" to filter by permission, e.g., perm:access.'),
     '#attached' => array(
       'js' => array(
         drupal_get_path('module', 'module_filter') . '/js/permissions.js',
@@ -163,6 +168,7 @@ function form_process_module_filter($element, &$form_state) {
               'dynamicPosition' => (!module_exists('page_actions')) ? variable_get('module_filter_dynamic_save_position', 1) : FALSE,
               'useURLFragment' => variable_get('module_filter_use_url_fragment', 1),
               'useSwitch' => variable_get('module_filter_use_switch', 1),
+              'trackRecent' => variable_get('module_filter_track_recent_modules', 1),
               'rememberUpdateState' => variable_get('module_filter_remember_update_state', 0),
             )
           ),
@@ -171,6 +177,9 @@ function form_process_module_filter($element, &$form_state) {
       )
     )
   );
+  if (isset($element['#description'])) {
+    $element['name']['#description'] = $element['#description'];
+  }
   if (variable_get('module_filter_remember_update_state', 0)) {
     $element['name']['#attached']['js'][] = 'misc/jquery.cookie.js';
   }
@@ -191,6 +200,20 @@ function module_filter_system_modules_submit_redirect($form, &$form_state) {
     'admin/modules',
     array('query' => $query),
   );
+}
+
+function module_filter_system_modules_submit_recent($form, &$form_state) {
+  $recent_modules = variable_get('module_filter_recent_modules', array());
+
+  foreach ($form_state['values']['modules'] as $package => $modules) {
+    foreach ($modules as $key => $module) {
+      if ($form['modules'][$package][$key]['enable']['#default_value'] != $module['enable']) {
+        $recent_modules[$key] = REQUEST_TIME;
+      }
+    }
+  }
+
+  variable_set('module_filter_recent_modules', $recent_modules);
 }
 
 function module_filter_new_modules() {
@@ -221,4 +244,8 @@ function module_filter_get_id($text) {
   $id = strtolower($text);
   $id = preg_replace('/([^a-z0-9]+)/', '-', $id);
   return trim($id, '-');
+}
+
+function module_filter_recent_filter($var) {
+  return (!($var < REQUEST_TIME - 60*60*24*7));
 }
